--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,8 @@
     "sizeg/yii2-jwt": "dev-master",
     "yiisoft/yii2-redis": "~2.0.0",
     "2amigos/yii2-tinymce-widget": "~1.1",
-    "yiisoft/yii2-imagine": "^2.3"
+    "yiisoft/yii2-imagine": "^2.3",
+    "yii2assets/yii2-pdfjs": ">=1.0"
   },
   "require-dev": {
     "yiisoft/yii2-debug": "~2.1.0",
