--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,10 @@
-# This is a basic workflow to help you get started with Actions
 name: build
+
 on: push
+
+env:
+  CIRCLE_ARTIFACTS: ./tmp/artifact
+  PROJECT_REPONAME: rnikkei-paper-viewer
 jobs:
   build:
     name: Build application
@@ -9,18 +13,24 @@ jobs:
     defaults:
       run:
         shell: bash
+
     steps:
-     - name: checkout
-       uses: actions/checkout@v3
-     
-     - name: echo first
-       run:  echo "Build success"
-     
-     - name: create artifacts
-       run: mkdir -p ./tmp/artifact
-       
-     # Create artifacts for file size reporting
-     - name: Create artifacts for file size reporting
-       uses: actions/upload-artifact@v3
-       with:
-         path: ./tmp/artifact
+
+      - name: checkout
+        uses: actions/checkout@v3
+
+      # Create artifacts for file size reporting
+      - name: Create artifacts for file size reporting
+        uses: actions/upload-artifact@v3
+        with:
+          path: ./tmp/artifact
+
+      # zip build project
+      - name: zip release for deploy
+        run: zip release.zip ./* -r
+
+      # Save workspace for other jobs
+      - name: Save workspace for other jobs
+        uses: actions/upload-artifact@v3
+        with:
+          path: release.zip
